--- a/vue-profile/src/assets/main.css
+++ b/vue-profile/src/assets/main.css
@@ -20,6 +20,10 @@
 .btn:focus{
   box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
 }
+.container{
+  padding-left: 30px;
+  padding-right: 30px;
+}
 
 /* ---------- HeaderTop ---------- */
 .bg-light{
@@ -136,19 +140,88 @@
   height: auto;
   background: var(--Primary-Default);
 }
+.carousel-container{
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+}
+.carousel-train{
+  width: 1000px;
+  margin: auto;
+  transform: translateX(0px);
+  transition: 0.5s;
+}
+.arrow-btn{
+  color: var(--white_p);
+  font-size: 2rem;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  opacity: 0.5;
+}
+.arrow-left{
+  left: 0;
+}
+.arrow-right{
+  right: 0;
+}
+.skill_Card{
+  width: 100%;
+}
+.skill_Title{
+  width: 100%;
+  aspect-ratio: 1/1;
+  border-radius: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  font-weight: bold;
+}
+.skill_fill{
+  background: var(--white_p);
+  color: var(--Primary-Default);
+}
+.skill_line{
+  color: var(--white_p);
+  border: 2px solid var(--white_p);
+}
+.skill_Content{
+  border-top: 1px solid var(--white_p);
+}
+.skill_Content p{
+  color: var(--white_p);
+  font-size: 1.2rem;
+}
+.dolt{
+  position: relative;
+}
+.dolt:before{
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 2%;
+  width: 12px;
+  height: 12px;
+  background: var(--Secondary-Default);
+  border-radius: 12px;
+  transform: translate(-50%, -50%);
+}
 @media screen and (min-width:768px){
-  .Skills{
-    height: auto;
-  }
+
+
 }
 @media screen and (min-width:992px){
-  .Skills{
-    height: 100vh;
-
+  .arrow-btn{
+    display: none;
   }
 }
 
 /* ---------- Portfolio ----------*/
+p.portfolio-card-title{
+  margin: 0;
+  color: var(--Primary-Default);
+}
 .el-card__body img{
   width: 100%;
 }
